@@ -1,6 +1,7 @@
 usb-moded (0.45) unstable; urgency=low
 
-  * Send disconnect signal only after clean-up has been done.
+  * Only signal MODE_UNDEFINED when we have actually done all the modesetting handling 
+    after disconnect. Fixes: NB#273204
   * Actually use cdrom timeout
 
  -- Philippe De Swert <philippe.de-swert@nokia.com>  Wed, 13 Jul 2011 14:45:42 +0300
